# portfolio-agent

./: .env.example  .gitignore  README.md  pyproject.toml
evals/: cases.md
src/portfolio_agent/: __init__.py
src/portfolio_agent/nodes/: debate.py  fundamentals_analyst.py  sentiment_analyst.py
src/portfolio_agent/report/: pipeline.py
src/portfolio_agent/tools/: market_data.py  sentiment.py
tests/: test_market_data.py
