[project]
name = "portfolio-agent"
version = "0.1.0"
description = "Multi-agent investment analysis system (facts decide, sentiment challenges)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "pydantic>=2.7",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4",
    "praw>=7.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
